@@ -1,4 +1,9 @@
 ------------------------------------------------------
+Release 1 | Beta 1 | Development 1 | Experimental 2
+
+* Added new control binding saving/loading
+
+------------------------------------------------------
 Release 1 | Beta 1 | Development 1 | Experimental 1
 
 * Added FieldScanner
